Update git intro tutorial.

--- a/tutorials.html
+++ b/tutorials.html
@@ -78,17 +78,16 @@
 			</h5>
 			<div class="d-none d-lg-block">
 			  <div class="row no-gutters">
-				  <!--<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
-				    <img class="img-fluid mx-auto my-auto d-block" src="" alt="" style="width: 100%;">
-          		  </div>-->
+				  <div class="col-lg-2 col-sm-2 col-2 d-flex justify-content-center" style="margin:10px;">
+				    <img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg" alt="" style="width: 100%;">
+          		  </div>
 				  <div class="col">					
-					  <!--<div class="card-body" style="padding-left:0px">-->
-					  <div class="card-body">
+					  <div class="card-body" style="padding-left:0px">
 						  <h6 class="card-subtitle mb-2 d-none d-md-block"></h6>
 <h6 class="card-subtitle mb-2 d-md-none"></h6>
 
 						  <div class="d-none d-lg-block">
-							  <p>A getting-started guide for using the software packages HyperCells and HyperBloch for modeling tight-binding models on hyperbolic lattices. It includes a brief overview over the purposes of the packages, complete instructions for installing them and simple examples including code scripts to download.</p>
+							  <p>A getting-started guide for using the software packages <a href="https://github.com/patrick-lenggenhager/HyperCells">HyperCells</a> and <a href="https://github.com/patrick-lenggenhager/HyperBloch">HyperBloch</a> for modeling tight-binding models on hyperbolic lattices. It includes a brief overview over the purposes of the packages, complete instructions for installing them and simple examples including code scripts to download.</p>
 						  </div>
 					  </div>
 				  </div>
@@ -98,10 +97,10 @@
 				<h6 class="card-subtitle mb-2 d-none d-md-block"></h6>
 <h6 class="card-subtitle mb-2 d-md-none"></h6>
 
-				  <img class="d-none d-md-block float-left mr-2" width="35%" src="">
-          <img class="d-block d-md-none float-left mr-2" width="45%" src="">
+				  <img class="d-none d-md-block float-left mr-2" width="35%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
+          <img class="d-block d-md-none float-left mr-2" width="45%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
           <p class="card-text">
-					  A getting-started guide for using the software packages HyperCells and HyperBloch for modeling tight-binding models on hyperbolic lattices. It includes a brief overview over the purposes of the packages, complete instructions for installing them and simple examples including code scripts to download.
+					  A getting-started guide for using the software packages <a href="https://github.com/patrick-lenggenhager/HyperCells">HyperCells</a> and <a href="https://github.com/patrick-lenggenhager/HyperBloch">HyperBloch</a> for modeling tight-binding models on hyperbolic lattices. It includes a brief overview over the purposes of the packages, complete instructions for installing them and simple examples including code scripts to download.
 				  </p>
 		  </div>
 		</div>
@@ -114,17 +113,16 @@
 			</h5>
 			<div class="d-none d-lg-block">
 			  <div class="row no-gutters">
-				  <!--<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
-				    <img class="img-fluid mx-auto my-auto d-block" src="" alt="" style="width: 100%;">
-          		  </div>-->
+				  <div class="col-lg-2 col-sm-2 col-2 d-flex justify-content-center" style="margin:10px;">
+				    <img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/GitLogo.png" alt="" style="width: 100%;">
+          		  </div>
 				  <div class="col">					
-					  <!--<div class="card-body" style="padding-left:0px">-->
-					  <div class="card-body">
+					  <div class="card-body" style="padding-left:0px">
 						  <h6 class="card-subtitle mb-2 d-none d-md-block"></h6>
 <h6 class="card-subtitle mb-2 d-md-none"></h6>
 
 						  <div class="d-none d-lg-block">
-							  <p>A brief introduction to versioning using git and Github including instructions to set up, some recommendations on good practices.</p>
+							  <p>A brief introduction to versioning using <a href="https://git-scm.com/" target="_blank">git</a> and <a href="https://github.com/" target="_blank">Github</a> including instructions to set it up, some recommendations on good practices, and advanced tools such as git large files storage (LFS), Github Actions, and Github Pages.</p>
 						  </div>
 					  </div>
 				  </div>
@@ -134,10 +132,10 @@
 				<h6 class="card-subtitle mb-2 d-none d-md-block"></h6>
 <h6 class="card-subtitle mb-2 d-md-none"></h6>
 
-				  <img class="d-none d-md-block float-left mr-2" width="35%" src="">
-          <img class="d-block d-md-none float-left mr-2" width="45%" src="">
+				  <img class="d-none d-md-block float-left mr-2" width="35%" src="/assets/media/thumbnails/GitLogo.png">
+          <img class="d-block d-md-none float-left mr-2" width="45%" src="/assets/media/thumbnails/GitLogo.png">
           <p class="card-text">
-					  A brief introduction to versioning using git and Github including instructions to set up, some recommendations on good practices.
+					  A brief introduction to versioning using <a href="https://git-scm.com/" target="_blank">git</a> and <a href="https://github.com/" target="_blank">Github</a> including instructions to set it up, some recommendations on good practices, and advanced tools such as git large files storage (LFS), Github Actions, and Github Pages.
 				  </p>
 		  </div>
 		</div>
