Update awards and outreach.

--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
 	<ul>
 		
 		
+			<li>SPS Award in Condensed Matter Physics for PhD thesis (2024)</li>
+		
 			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
 		
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
@@ -239,9 +241,8 @@
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		During my time in Zurich, I was a board member and juror in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
@@ -387,6 +388,8 @@
 	<ul>
 		
 		
+			<li>SPS Award in Condensed Matter Physics for PhD thesis (2024)</li>
+		
 			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
 		
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
@@ -423,9 +426,8 @@
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		During my time in Zurich, I was a board member and juror in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
@@ -567,6 +569,8 @@
 	<ul>
 		
 		
+			<li>SPS Award in Condensed Matter Physics for PhD thesis (2024)</li>
+		
 			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
 		
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
@@ -603,9 +607,8 @@
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		During my time in Zurich, I was a board member and juror in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
