--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		
 	</dl>
 
-	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank">Full CV (Aug 2024)</a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
@@ -382,7 +382,7 @@
 		
 	</dl>
 
-	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank">Full CV (Aug 2024)</a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
@@ -563,7 +563,7 @@
 		
 	</dl>
 
-	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank">Full CV (Aug 2024)</a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
