Update research interests.

--- a/index.html
+++ b/index.html
@@ -167,12 +167,11 @@
 	</p>
 	
 	<p>
-		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
-		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
-		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
-		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+		Currently, I am working on quantum control and the use of quantum information theory to characterize quantum many-body systems.
+		I have also done extensive work on hyperbolic lattices, which are the analogue of periodic structures in the space of constant negative curvature and have potential applications ranging from high-energy physics over cosmology to quantum error correction.
+		In metamaterial experiments, we have shown that hyperbolic lattices enable simulations of negatively curved space and we have developed and applied methods to study their quantum properties.
 
-		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
 	</p>
 </div>
 
@@ -213,7 +212,7 @@
 		
 	</ul>
 
-	<h4 class="my-2">Teaching/Supervision</h4>
+	<h4 class="my-2">Supervision and Teaching</h4>
 	<em>Students</em>
 	<ul>
 		
@@ -352,12 +351,11 @@
 	</p>
 	
 	<p>
-		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
-		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
-		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
-		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+		Currently, I am working on quantum control and the use of quantum information theory to characterize quantum many-body systems.
+		I have also done extensive work on hyperbolic lattices, which are the analogue of periodic structures in the space of constant negative curvature and have potential applications ranging from high-energy physics over cosmology to quantum error correction.
+		In metamaterial experiments, we have shown that hyperbolic lattices enable simulations of negatively curved space and we have developed and applied methods to study their quantum properties.
 
-		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
 	</p>
 </div>
 
@@ -398,7 +396,7 @@
 		
 	</ul>
 
-	<h4 class="my-2">Teaching/Supervision</h4>
+	<h4 class="my-2">Supervision and Teaching</h4>
 	<em>Students</em>
 	<ul>
 		
@@ -533,12 +531,11 @@
 	</p>
 	
 	<p>
-		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
-		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
-		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
-		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+		Currently, I am working on quantum control and the use of quantum information theory to characterize quantum many-body systems.
+		I have also done extensive work on hyperbolic lattices, which are the analogue of periodic structures in the space of constant negative curvature and have potential applications ranging from high-energy physics over cosmology to quantum error correction.
+		In metamaterial experiments, we have shown that hyperbolic lattices enable simulations of negatively curved space and we have developed and applied methods to study their quantum properties.
 
-		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
 	</p>
 </div>
 
@@ -579,7 +576,7 @@
 		
 	</ul>
 
-	<h4 class="my-2">Teaching/Supervision</h4>
+	<h4 class="my-2">Supervision and Teaching</h4>
 	<em>Students</em>
 	<ul>
 		
@@ -619,7 +616,7 @@
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 copyright-text">Copyright &copy; 2024 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
+		<p class="m-0 copyright-text">Copyright &copy; 2025 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
 	</div>
 </footer>
 
