Link to data and code repositories and HyperCells website on startpage.

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
 
 		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
 	</p>
+
+	<p>
+		I am passionate about writing reusable code and thus publish all of my research code and data online.
+		You can find links to data and code repositories in the publication posts, they are hosted either on the <a href="https://www.research-collection.ethz.ch/discover?filtertype_0=author&filter_relational_operator_0=authority&filter_0=ca836d318d36563af8480e38564176d8&filtertype_1=type&filter_relational_operator_1=equals&filter_1=Data+Collection" target="_blank">Research Collection of ETHZ</a> or on <a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Lenggenhager%2C%20Patrick%20M.%22&l=list&p=1&s=10&sort=bestmatch" target="_blank">Zenodo</a>.
+		I have also published a large part of the code used for studying hyperbolic lattices in a pair of open-source software packages: <a href="https://www.hypercells.net" target="_blank">HyperCells and HyperBloch</a>.
+	</p>
 </div>
 
 	</div>
@@ -357,6 +363,12 @@
 
 		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
 	</p>
+
+	<p>
+		I am passionate about writing reusable code and thus publish all of my research code and data online.
+		You can find links to data and code repositories in the publication posts, they are hosted either on the <a href="https://www.research-collection.ethz.ch/discover?filtertype_0=author&filter_relational_operator_0=authority&filter_0=ca836d318d36563af8480e38564176d8&filtertype_1=type&filter_relational_operator_1=equals&filter_1=Data+Collection" target="_blank">Research Collection of ETHZ</a> or on <a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Lenggenhager%2C%20Patrick%20M.%22&l=list&p=1&s=10&sort=bestmatch" target="_blank">Zenodo</a>.
+		I have also published a large part of the code used for studying hyperbolic lattices in a pair of open-source software packages: <a href="https://www.hypercells.net" target="_blank">HyperCells and HyperBloch</a>.
+	</p>
 </div>
 
 	</div>
@@ -536,6 +548,12 @@
 		In metamaterial experiments, we have shown that hyperbolic lattices enable simulations of negatively curved space and we have developed and applied methods to study their quantum properties.
 
 		See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details and past projects.
+	</p>
+
+	<p>
+		I am passionate about writing reusable code and thus publish all of my research code and data online.
+		You can find links to data and code repositories in the publication posts, they are hosted either on the <a href="https://www.research-collection.ethz.ch/discover?filtertype_0=author&filter_relational_operator_0=authority&filter_0=ca836d318d36563af8480e38564176d8&filtertype_1=type&filter_relational_operator_1=equals&filter_1=Data+Collection" target="_blank">Research Collection of ETHZ</a> or on <a href="https://zenodo.org/search?q=metadata.creators.person_or_org.name%3A%22Lenggenhager%2C%20Patrick%20M.%22&l=list&p=1&s=10&sort=bestmatch" target="_blank">Zenodo</a>.
+		I have also published a large part of the code used for studying hyperbolic lattices in a pair of open-source software packages: <a href="https://www.hypercells.net" target="_blank">HyperCells and HyperBloch</a>.
 	</p>
 </div>
 
