--- a/projects.html
+++ b/projects.html
@@ -83,8 +83,8 @@
           </div>
 				  <div class="col">					
 					  <div class="card-body" style="padding-left:0px">
-						  <h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, A. Stegmaier, D. M. Urwyler, A. Chen, T. Tummuru, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
-<h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, A. Stegmaier, D. M. Urwyler, A. Chen, T. Tummuru, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
+						  <h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, S. Dey, T. Tummuru, A. Chen, D. M. Urwyler, A. Stegmaier, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
+<h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, S. Dey, T. Tummuru, A. Chen, D. M. Urwyler, A. Stegmaier, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
 
 						  <div class="d-none d-lg-block">
 							  <p><p>Curved spaces are usually associated with high-energy physics and cosmology. However, the possibility of tabletop experiments emulating such phenomena and the interest in synthetic matter in curved spaces have elevated curved spaces to relevance in condensed matter physics as well.
@@ -98,8 +98,8 @@ In this project, we study various aspects of such hyperbolic lattices, both expe
 			  </div>
 			</div>
 			<div class="card-body d-block d-lg-none">
-				<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, A. Stegmaier, D. M. Urwyler, A. Chen, T. Tummuru, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
-<h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, A. Stegmaier, D. M. Urwyler, A. Chen, T. Tummuru, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
+				<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, S. Dey, T. Tummuru, A. Chen, D. M. Urwyler, A. Stegmaier, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
+<h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, S. Dey, T. Tummuru, A. Chen, D. M. Urwyler, A. Stegmaier, T. Neupert, R. Thomale, J. Maciejko, T. Bzdušek, et. al</h6>
 
 				  <img class="d-none d-md-block float-left mr-2" width="35%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
           <img class="d-block d-md-none float-left mr-2" width="45%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
